istio-in-action/ch9/my-work/sgw/ap-allow-axes-to-access-db.yaml
apiVersion: "security.istio.io/v1beta1"
kind: AuthorizationPolicy
metadata:
  name: allow-axes-to-access-db
  namespace: istioinaction
spec:
  selector:
    matchLabels:
      app: mysql
  rules:
    - from:
        - source:
            principals: ["cluster.local/ns/istioinaction/sa/mff-axes"]
#      to:
#        - operation:
#            hosts: ["mysql"]

#TODO I must read about traffic management cuz this host ain't working as the DNS name of mysql
