istio-in-action/ch9/my-work/sgw/ap-policy-per-role-spring-cloud-gateway.yaml
apiVersion: "security.istio.io/v1beta1"
kind: AuthorizationPolicy
metadata:
  name: ap-policy-per-role
  namespace: istioinaction
spec:
  selector:
    matchLabels:
      app: mff-spring-cloud-gateway
  rules:
     - when:
        - key: request.auth.claims[privileges]
          values: ["ROLE_DIGITAL_EGYPT"]
       to:
        - operation:
#            hosts: ["httpbin.io"] # axis-service
            paths: ["/api/anything/subsidies/*"] # /subsidies/{id}
            methods: ["PUT"]
        - operation:
#            hosts: ["httpbin.io"] # axis-service
            paths: ["/api/anything/subsidies/brochures/*"] #/subsidies/brochures/{brochureId}/requests/
            methods: ["POST"]
        - operation:
            paths: [ "/api/anything/*" ] #/subsidies/brochures/{brochureId}/requests/
            methods: [ "GET" ]
